<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".mainmodule.MainModule.view.Contacto"
    tools:showIn="@layout/activity_ver_contacto">

    <android.support.v7.widget.CardView

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
                <TextView
                    android:padding="15dp"
                    android:textSize="25dp"
                    android:text="@string/realizar_llamada"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            <Button
                android:id="@+id/button_contacto"
                android:layout_gravity="center"
                android:text="@string/call"
                android:textColor="@color/colorPrimaryDark"
                android:background="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:padding="25dp"
                android:text="@string/fragmen_home_ubicacion"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <WebView
                android:id="@+id/webview"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </WebView>
        </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>